added code generator for arduino
Added code generator for arduino

--- a/.env
+++ b/.env
@@ -18,9 +18,9 @@ TWILIO_ACCOUNT_SID=AC1ce21fc64df12b7d1d59670ac48398e2
 TWILIO_VERIFY_SID=VA7af090cc8e518a7bd82ee609c7ffa810
 
 ### EMQX BACKEND
-EMQX_BASE_URL=http://miniserver.local:18083
-EMQX_API_KEY=c7ad44cbad762a5d 
-EMQX_API_SECRET=kZDBdkaWu5bgO5PAZWEAWds7iMgcEownmjhlidcamNM
+EMQX_BASE_URL=http://10.42.0.1:18083
+EMQX_API_KEY=0458fd7edd02ec0c
+EMQX_API_SECRET=H2YVZGaT8MubZ1m7T4w9BWEfNafeEJAVNBPE5FRDnrsE
 
 ### GEOCOD API
 GEOCOD_API_KEY=0d09b2fb-f669-40f2-9875-0d4c77c269c2 
