--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.3.2",
+    "@hookform/resolvers": "^3.3.4",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "latest",
     "@radix-ui/react-accordion": "^1.1.2",
@@ -20,6 +20,8 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-radio-group": "^1.1.3",
+    "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
@@ -30,13 +32,17 @@
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.2.1",
     "@types/bcrypt": "^5.0.2",
+    "@types/d3": "^7.4.3",
     "@types/leaflet": "^1.9.8",
     "@types/multer": "^1.4.11",
     "@types/nodemailer": "^6.4.14",
     "@types/react-leaflet": "^3.0.0",
+    "@types/react-syntax-highlighter": "^15.5.11",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "concurrently": "^8.2.2",
+    "d3": "^7.8.5",
     "date-fns": "^3.0.6",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.316.0",
@@ -48,10 +54,12 @@
     "prisma": "latest",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.49.2",
+    "react-hook-form": "^7.50.1",
     "react-iframe": "^1.8.5",
     "react-leaflet": "^4.2.1",
     "react-simple-typewriter": "^5.0.1",
+    "react-syntax-highlighter": "^15.5.0",
+    "recharts": "^2.12.0",
     "sonner": "^1.4.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
