added controller code generation backend
added controller

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 NEXT_PUBLIC_BASE_URL="http://localhost:3000"
-DATABASE_URL="mongodb://gscadmin:adminatgsc@miniserver.local:27017/gscdb?authSource=gscdb&replicaSet=rs0&directConnection=true"
+# DATABASE_URL="mongodb://gscuser:useratgsc@10.42.0.1:27017/gscdb?replicaSet=rs0&directConnection=true"
+DATABASE_URL="mongodb://gscuser:useratgsc@192.168.0.163:27017,192.168.0.163:27018,192.168.0.163:27019/gscdb?replicaSet=rs0&authSource=gscdb"
 EMAIL_SERVER_USER=pemtshewang500@gmail.com
 EMAIL_SERVER_PASSWORD=frtv oqhg unjn xtxk
 EMAIL_SERVER_HOST=smtp.gmail.com
@@ -18,11 +19,13 @@ TWILIO_ACCOUNT_SID=AC1ce21fc64df12b7d1d59670ac48398e2
 TWILIO_VERIFY_SID=VA7af090cc8e518a7bd82ee609c7ffa810
 
 ### EMQX BACKEND
-EMQX_BASE_URL=http://10.42.0.1:18083
-EMQX_API_KEY=0458fd7edd02ec0c
-EMQX_API_SECRET=H2YVZGaT8MubZ1m7T4w9BWEfNafeEJAVNBPE5FRDnrsE
+EMQX_BASE_URL=http://192.168.0.163:18083
+EMQX_API_KEY=2228953ee520257d
+EMQX_API_SECRET=ola7s2fiPENYKOiieV0MX5iYb3uk8ABnEkLXUL9BRVBK
 
 ### GEOCOD API
 GEOCOD_API_KEY=0d09b2fb-f669-40f2-9875-0d4c77c269c2 
 GEOCOD_URL="https://geocod.xyz/api/public/getCoords"
 # api key = https://geocod.xyz/api/public/getCoords?apikey=0d09b2fb-f669-40f2-9875-0d4c77c269c2&postaladdress=Chukha,Bhutan&city=Phuentsholing
+
+NEXT_PUBLIC_GRAPHANA_DASHBOARD_URL=http://192.168.0.163:3000/public-dashboards/8bd3e631b6284182b5ed2441d6a4077f
