added code controller

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_BASE_URL="http://localhost:3000"
+NEXT_PUBLIC_BASE_URL="http://192.168.0.163:3001"
 # DATABASE_URL="mongodb://gscuser:useratgsc@10.42.0.1:27017/gscdb?replicaSet=rs0&directConnection=true"
 DATABASE_URL="mongodb://gscuser:useratgsc@192.168.0.163:27017,192.168.0.163:27018,192.168.0.163:27019/gscdb?replicaSet=rs0&authSource=gscdb"
 EMAIL_SERVER_USER=pemtshewang500@gmail.com
@@ -7,11 +7,11 @@ EMAIL_SERVER_HOST=smtp.gmail.com
 EMAIL_SERVER_PORT=587
 EMAIL_FROM=pemtshewang500@gmail.com
 NEXTAUTH_SECRET="PI5fafKSgx2nTCv2EYsIshrbDI9mv5WKEA6lcDW0oXk="
-NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL=http://192.168.0.163:3001
 
 #### IMGUR 
 IMGUR_CLIENT_SECRET=3c079b63c9ae9e466a5e58c5643abf0e931d3a2e
-IMGUR_CLIENT_ID=8d14b76a36d8e5b
+IMGUR_CLIENT_ID=d14b76a36d8e5b
 
 ### TWILIO
 TWILIO_AUTH_TOKEN=0fb898792056398520c5ece9a4feaa5d
