--- a/.env
+++ b/.env
@@ -1,31 +1,24 @@
-NEXT_PUBLIC_BASE_URL="http://192.168.0.163:3001"
-# DATABASE_URL="mongodb://gscuser:useratgsc@10.42.0.1:27017/gscdb?replicaSet=rs0&directConnection=true"
-DATABASE_URL="mongodb://gscuser:useratgsc@192.168.0.163:27017,192.168.0.163:27018,192.168.0.163:27019/gscdb?replicaSet=rs0&authSource=gscdb"
+NEXT_PUBLIC_BASE_URL="http://localhost:3001"
+DATABASE_URL="mongodb://gscuser:useratgsc@localhost:27017/gscdb?replicaSet=rs0&directConnection=true"
 EMAIL_SERVER_USER=pemtshewang500@gmail.com
 EMAIL_SERVER_PASSWORD=frtv oqhg unjn xtxk
 EMAIL_SERVER_HOST=smtp.gmail.com
 EMAIL_SERVER_PORT=587
 EMAIL_FROM=pemtshewang500@gmail.com
 NEXTAUTH_SECRET="PI5fafKSgx2nTCv2EYsIshrbDI9mv5WKEA6lcDW0oXk="
-NEXTAUTH_URL=http://192.168.0.163:3001
+NEXTAUTH_URL=http://localhost:3001
 
 #### IMGUR 
 IMGUR_CLIENT_SECRET=3c079b63c9ae9e466a5e58c5643abf0e931d3a2e
 IMGUR_CLIENT_ID=d14b76a36d8e5b
 
 ### TWILIO
-TWILIO_AUTH_TOKEN=0fb898792056398520c5ece9a4feaa5d
+TWILIO_AUTH_TOKEN=f23df754dc734708c70d73bd635dc1a0 
 TWILIO_ACCOUNT_SID=AC1ce21fc64df12b7d1d59670ac48398e2
-TWILIO_VERIFY_SID=VA7af090cc8e518a7bd82ee609c7ffa810
 
 ### EMQX BACKEND
-EMQX_BASE_URL=http://192.168.0.163:18083
+EMQX_BASE_URL=http://localhost:18083
 EMQX_API_KEY=2228953ee520257d
 EMQX_API_SECRET=ola7s2fiPENYKOiieV0MX5iYb3uk8ABnEkLXUL9BRVBK
 
-### GEOCOD API
-GEOCOD_API_KEY=0d09b2fb-f669-40f2-9875-0d4c77c269c2 
-GEOCOD_URL="https://geocod.xyz/api/public/getCoords"
-# api key = https://geocod.xyz/api/public/getCoords?apikey=0d09b2fb-f669-40f2-9875-0d4c77c269c2&postaladdress=Chukha,Bhutan&city=Phuentsholing
-
-NEXT_PUBLIC_GRAPHANA_DASHBOARD_URL=http://192.168.0.163:3000/public-dashboards/8bd3e631b6284182b5ed2441d6a4077f
+NEXT_PUBLIC_GRAPHANA_DASHBOARD_URL=http://localhost:3000/public-dashboards/ce596907b0a7437aa41782a4afcb55ad 
