fixed all the errors for build

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_BASE_URL="http://localhost:3001"
+NEXT_PUBLIC_BASE_URL="http://localhost:3000"
 DATABASE_URL="mongodb://gscuser:useratgsc@localhost:27017/gscdb?replicaSet=rs0&directConnection=true"
 EMAIL_SERVER_USER=pemtshewang500@gmail.com
 EMAIL_SERVER_PASSWORD=frtv oqhg unjn xtxk
@@ -6,7 +6,7 @@ EMAIL_SERVER_HOST=smtp.gmail.com
 EMAIL_SERVER_PORT=587
 EMAIL_FROM=pemtshewang500@gmail.com
 NEXTAUTH_SECRET="PI5fafKSgx2nTCv2EYsIshrbDI9mv5WKEA6lcDW0oXk="
-NEXTAUTH_URL=http://localhost:3001
+NEXTAUTH_URL=http://localhost:3000
 
 #### IMGUR 
 IMGUR_CLIENT_SECRET=3c079b63c9ae9e466a5e58c5643abf0e931d3a2e
@@ -21,4 +21,5 @@ EMQX_BASE_URL=http://localhost:18083
 EMQX_API_KEY=2228953ee520257d
 EMQX_API_SECRET=ola7s2fiPENYKOiieV0MX5iYb3uk8ABnEkLXUL9BRVBK
 
-NEXT_PUBLIC_GRAPHANA_DASHBOARD_URL=http://localhost:3000/public-dashboards/ce596907b0a7437aa41782a4afcb55ad 
+NEXT_PUBLIC_GRAPHANA_DASHBOARD_URL=http://localhost:3001/public-dashboards/ce596907b0a7437aa41782a4afcb55ad 
+PORT=3001
