--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "date-fns": "^3.0.6",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.316.0",
+    "mqtt": "^5.3.5",
     "multer": "^1.4.5-lts.1",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
