debugged map finder route
removed and statement in prisma query that selects null

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_BASE_URL="http://localhost:3000"
+NEXT_PUBLIC_BASE_URL=http://192.168.137.73:3000
 DATABASE_URL="mongodb://gscuser:useratgsc@localhost:27017/gscdb?replicaSet=rs0&directConnection=true"
 EMAIL_SERVER_USER=pemtshewang500@gmail.com
 EMAIL_SERVER_PASSWORD=frtv oqhg unjn xtxk
@@ -9,11 +9,11 @@ NEXTAUTH_SECRET="PI5fafKSgx2nTCv2EYsIshrbDI9mv5WKEA6lcDW0oXk="
 NEXTAUTH_URL=http://localhost:3000
 
 #### IMGUR 
-IMGUR_CLIENT_SECRET=3c079b63c9ae9e466a5e58c5643abf0e931d3a2e
-IMGUR_CLIENT_ID=d14b76a36d8e5b
+IMGUR_CLIENT_SECRET=728ec0a68c1fd11121d0522985cb33da72939912
+IMGUR_CLIENT_ID=daa8592d4fe8fca
 
 ### TWILIO
-TWILIO_AUTH_TOKEN=f23df754dc734708c70d73bd635dc1a0 
+TWILIO_AUTH_TOKEN=0ab76bc023d439dbe7095d9c92ff6a3a
 TWILIO_ACCOUNT_SID=AC1ce21fc64df12b7d1d59670ac48398e2
 
 ### EMQX BACKEND
@@ -21,5 +21,4 @@ EMQX_BASE_URL=http://localhost:18083
 EMQX_API_KEY=2228953ee520257d
 EMQX_API_SECRET=ola7s2fiPENYKOiieV0MX5iYb3uk8ABnEkLXUL9BRVBK
 
-NEXT_PUBLIC_GRAPHANA_DASHBOARD_URL=http://localhost:3001/public-dashboards/ce596907b0a7437aa41782a4afcb55ad 
-PORT=3001
+NEXT_PUBLIC_GRAPHANA_DASHBOARD_URL=http://192.168.137.73:3001/public-dashboards/ce596907b0a7437aa41782a4afcb55ad 
