--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "concurrently": "^8.2.2",
     "d3": "^7.8.5",
     "date-fns": "^3.0.6",
+    "eslint-plugin-react": "latest",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.316.0",
     "mqtt": "^5.3.5",
