added for deployment
Deployment ready

--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "@next-auth/prisma-adapter": "^1.0.7",
@@ -27,6 +30,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@t3-oss/env-core": "^0.9.2",
     "@tanstack/react-table": "^8.11.7",
     "@tsparticles/engine": "^3.2.1",
     "@tsparticles/react": "^3.0.0",
@@ -38,13 +42,14 @@
     "@types/nodemailer": "^6.4.14",
     "@types/react-leaflet": "^3.0.0",
     "@types/react-syntax-highlighter": "^15.5.11",
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "concurrently": "^8.2.2",
     "d3": "^7.8.5",
     "date-fns": "^3.0.6",
     "eslint-plugin-react": "latest",
+    "framer-motion": "^11.0.25",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.316.0",
     "mqtt": "^5.3.5",
@@ -59,12 +64,12 @@
     "react-hook-form": "^7.50.1",
     "react-iframe": "^1.8.5",
     "react-leaflet": "^4.2.1",
-    "react-simple-typewriter": "^5.0.1",
     "react-syntax-highlighter": "^15.5.0",
     "recharts": "^2.12.0",
     "sonner": "^1.4.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "tsx": "^4.7.2",
     "twilio": "^4.21.0",
     "zod": "^3.22.4"
   },
